--- a/src/app/form-login.html
+++ b/src/app/form-login.html
@@ -79,7 +79,7 @@
                     <button class="b-change" id="change-button2">Go to Register</button>
                 </div>
                 <div class="date-area">
-                    <form action="" method="post" class="dates">
+                    <form action="" method="post" class="dates1">
                         <fieldset class="date1">
                             <div class="input-field" id="content-d">
                                 <input id="email" type="email" class="d-input" required>
@@ -88,7 +88,7 @@
                         </fieldset>
                         <fieldset class="date2">
                             <div class="input-field" id="content-d">
-                                <input id="password" type="password" class="d-input">
+                                <input id="password" type="password" class="d-input" required>
                                 <label for="password">Password</label>
                             </div>
                         </fieldset>
