--- a/src/app/assets/css/style-main.css
+++ b/src/app/assets/css/style-main.css
@@ -3,7 +3,7 @@
 }
 /* style to the scrollbar */
 body::-webkit-scrollbar{
-    width: 10px;
+    width: 8px;
 }
 body::-webkit-scrollbar-thumb{
     background-color: #a3a3a3;
@@ -45,14 +45,14 @@ body{
 /* style to the nav-menu */
 .container-nav{
     padding: 0px 4% 0px 4%;
-    height: 72px;
+    height: 68px;
 }
 .nav-logo{
     width: 240px;
-    height: 68px;
+    height: 66px;
 }
 #nav .nav-wrapper ul li .text-menu{
-    font-size: 1.1em;
+    font-size: 1em;
 }
 #nav .nav-wrapper ul li .text-menu:hover{
     background-color: transparent;
@@ -218,47 +218,57 @@ body{
     width: 100%;
     margin-top: 2vh;
     display: grid;
-    grid-template-columns: 340px 15fr;
+    grid-template-columns: 1fr 62% 1fr;
     grid-template-rows: 3fr 6fr;
     gap: 4px;
 }
 .aside-content1{
     grid-column: 1/2;
     grid-row: 1/-1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.aside-content2{
+    grid-column: 3/4;
+    grid-row: 1/-1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .content-anime{
-    grid-column: 2/-1;
+    grid-column: 2/3;
     grid-row: 1/2;
 }
 .content-anime1{
-    grid-column: 2/-1;
+    grid-column: 2/3;
     grid-row: 2/-1;
 }
 .anime-title{
     display: block;
-    width: 96%;
+    width: 100%;
     margin: 0px auto;
-    font-size: 2rem;
+    font-size: 1.8rem;
     color: #9c9c9c;
     font-family:sans-serif;
     padding: 10px;
 }
 .anime-content-item1{
-    width: 96%;
+    width: 100%;
     margin: 2px auto;
     display: flex;
     flex-wrap: wrap;
 }
 .anime-content-item2{
-    width: 96%;
+    width: 100%;
     margin: 2px auto;
     display: flex;
     flex-wrap: wrap;
 }
 .item1{
     position: relative;
-    width: 22%;
-    height: 140px;
+    width: 23%;
+    height: 120px;
     background-image: url(/src/app/assets/img/boku.jpg);
     background-size: cover;
     background-position: center;
@@ -305,7 +315,7 @@ body{
     margin: 0px auto;
     font-family: 'Hind Siliguri', sans-serif;
     color:#ffffff;
-    font-size: 18px;
+    font-size: 17px;
     opacity: 1;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -329,7 +339,7 @@ body{
 .item2{
     position: relative;
     width: 22%;
-    height: 320px;
+    height: 300px;
     margin: 12px auto;
     border-radius: 6px;
     border: 1px solid #bbbbbb;
@@ -345,7 +355,7 @@ body{
     width: 100%;
     height: 100%;
     grid-template-columns: 1f;
-    grid-template-rows: 80% 1fr;
+    grid-template-rows: 70% 1fr;
     color: #2b2b2b;
 }
 .img-item2{
@@ -353,7 +363,7 @@ body{
     grid-row: 1/2;
     position: relative;
     width: 94%;
-    height: 90%;
+    height: 100%;
     margin: 6px auto;
     background-image: url(/src/app/assets/img/boku.jpg);
     background-size:100% 100%;
@@ -370,7 +380,11 @@ body{
     opacity: .1;
 }
 .title-item2{
-    margin:2px 4px;
+    grid-column: 1/-1;
+    grid-row: 2/-1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     font-family: 'Hind Siliguri', sans-serif;
     font-size: 16px;
@@ -378,25 +392,26 @@ body{
     overflow:hidden;
 }
 .link-item2:hover{
-    color: #6b00e6;
+    color: #5a00bb;
 }
 .icon-item2{
     position: absolute;
-    top: 8px;
-    right: 8px;
+    top: 7px;
+    right: 7px;
     padding: 2px;
     background-color: #2b2b2ba8;
+    border-radius: 4px;
 } 
 .icon-item2 i{
+    font-size: 20px;
     color: #ffffff;
 }
 .icon-item2 i:hover{
     cursor: pointer;
 }
 .legion{
-    width: 90%;
-    height: 50%;
-    margin: 10px 0px 10px 30px;
+    width: 96%;
+    height: 90%;
     background-color: #00c02a;
 }
 /* style to the content footer */
@@ -405,11 +420,11 @@ body{
 }
 #footer{
     width: 100%;
-    height: 120px;
+    height: 100px;
     background-color: #462bc0;
 }
 /* media responsive for divices small */
-@media (min-width:100px) and (max-width:440px){
+@media (min-width:100px) and (max-width:480px){
     .waiting-title{
         font-size: 2rem;
     }
@@ -463,26 +478,28 @@ body{
     #main{
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 640px 4fr 6fr;
+        grid-template-rows: 4fr 6fr;
         gap: 10px;
     }
     .aside-content1{
-        grid-column: 1/-1;
-        grid-row: 1/2;
+        display: none;
+    }
+    .aside-content2{
+        display: none;
     }
     .content-anime{
         grid-column: 1/-1;
-        grid-row: 2/3;
+        grid-row: 1/2;
     }
     .content-anime1{
         grid-column: 1/-1;
-        grid-row: 3/-1;
+        grid-row: 2/-1;
     }
     .anime-title{
         font-size: 2rem;
     }
     .item1{
-        width: 86%;
+        width: 80%;
         height: 188px;
         background-color: #f503a4;
         margin:10px auto;
@@ -491,14 +508,14 @@ body{
         font-size: 20px;
     }
     .item2{
-        width: 74%;
-        height: 360px;
+        width: 60%;
+        height: 380px;
         background-color: #ffa600;
         margin: 8px auto;
     }
     .img-item2{
         width: 94%;
-        height: 90%;
+        height: 100%;
         margin: 6px auto;
     }
     .title-item2{
@@ -507,7 +524,7 @@ body{
     }
 }
 /* media responcive for divices medium small */
-@media (min-width:441px) and (max-width:720px){
+@media (min-width:481px) and (max-width:720px){
     .waiting-title{
         font-size: 3rem;
     }
@@ -560,26 +577,28 @@ body{
     #main{
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 680px 4fr 6fr;
+        grid-template-rows:4fr 6fr;
         gap: 10px;
     }
     .aside-content1{
-        grid-column: 1/-1;
-        grid-row: 1/2;
+        display: none;
+    }
+    .aside-content2{
+        display: none;
     }
     .content-anime{
         grid-column: 1/-1;
-        grid-row: 2/3;
+        grid-row: 1/2;
     }
     .content-anime1{
         grid-column: 1/-1;
-        grid-row: 3/-1;
+        grid-row: 2/-1;
     }
     .anime-title{
         font-size: 2rem;
     }
     .item1{
-        width: 40%;
+        width: 48%;
         height: 180px;
         background-color: #f503a4;
         margin:8px auto;
@@ -650,7 +669,10 @@ body{
     }
     .aside-content1{
         grid-column: 1/2;
-        grid-row: 1/span 2;
+        grid-row: 1/-1;
+    }
+    .aside-content2{
+        display: none;
     }
     .content-anime{
         grid-column: 2/-1;
@@ -677,7 +699,7 @@ body{
     }
 }
 /* media responsive for divices medium-large */
-@media (min-width:993px) and (max-width:1200px){
+@media (min-width:993px) and (max-width:1220px){
     #main{
         display: grid;
         grid-template-columns: 300px 12fr;
@@ -700,20 +722,20 @@ body{
         font-size: 2rem;
     }
     .item1{
-        width: 31%;
-        height: 160px;
+        width: 30%;
+        height: 140px;
         background-color: #f503a4;
         margin:8px auto;
     }
     .item2{
-        width: 31%;
-        height: 300px;
+        width: 28%;
+        height: 320px;
         background-color: #ffa600;
         margin: 8px auto;
     }
 }
 /* media responsive for divices big  */
-@media (min-width:1440px) and (max-width:1880px){
+@media (min-width:1480px) and (max-width:1980px){
     .waiting-title{
         font-size: 5rem;
     }
@@ -727,6 +749,9 @@ body{
     .nav-logo{
         width: 260px;
         height: 86px;
+    }
+    #nav .nav-wrapper ul li .text-menu{
+        font-size: 1.4em;
     }
     #modallog{
         width: 26em;
@@ -766,33 +791,41 @@ body{
     }
     #main{
         display: grid;
-        grid-template-columns: 340px 12fr;
-        grid-template-rows: 4fr 6fr;
+        grid-template-columns: 1fr 60% 1fr;
+        grid-template-rows: 3fr 6fr;
         gap: 10px;
     }
     .aside-content1{
         grid-column: 1/2;
-        grid-row: 1/span 2;
+        grid-row: 1/-1;
+        display: flex;
+        justify-content: center;
+    }
+    .aside-content2{
+        grid-column: 3/4;
+        grid-row: 1/-1;
+        display: flex;
+        justify-content: center;
     }
     .content-anime{
-        grid-column: 2/-1;
+        grid-column: 2/3;
         grid-row: 1/2;
     }
     .content-anime1{
-        grid-column: 2/-1;
+        grid-column: 2/3;
         grid-row: 2/-1;
     }
     .anime-title{
         font-size: 2rem;
     }
     .item1{
-        width: 18%;
+        width: 22%;
         height: 140px;
         background-color: #f503a4;
         margin:8px auto;
     }
     .item2{
-        width: 18%;
+        width: 22%;
         height: 280px;
         background-color: #ffa600;
         margin: 8px auto;
