--- a/src/app/main-page.html
+++ b/src/app/main-page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animemaniatics-main</title>
+    <title>AnimeManiatics-main</title>
     <link rel="shortcut icon" href="/src/app/assets/img/favicon-v1.5.png" type="image/x-icon">
     <link rel="stylesheet" href="/src/app/assets/css/style-main.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -260,9 +260,9 @@
                 </div>
             </article>
         </section>
-        <!-- <aside class="aside-content2">
+        <aside class="aside-content2">
             <div class="legion"></div>
-        </aside> -->
+        </aside>
     </main>
     <!-- footer the page -->
     <footer class="content-footer" id="footer">
