--- a/src/app/main-page.html
+++ b/src/app/main-page.html
@@ -48,7 +48,7 @@
                     </a>
                     <ul class="right hide-on-med-and-down nav-menu">
                         <li><a href="#" class="text-menu">Home</a></li>
-                        <li><a href="#" class="text-menu">Anime repertorie</a></li>
+                        <li><a href="/src/app/repertorie.html" class="text-menu">Anime repertorie</a></li>
                         <li>
                             <div class="content-search">
                                 <div class="input-field nav-area-search">
@@ -106,7 +106,7 @@
                 </div>
             </li>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Anime repertorie</a></li>
+            <li><a href="/src/app/repertorie.html">Anime repertorie</a></li>
         </ul>
         <!-- modal register -->
             <div id="modallog" class="modal">
