--- a/src/app/assets/css/style-repertorie.css
+++ b/src/app/assets/css/style-repertorie.css
@@ -1,6 +1,3 @@
-*{
-    box-sizing: border-box;
-}
 /* style to the scrollbar */
 body::-webkit-scrollbar{
     width: 8px;
@@ -16,33 +13,10 @@ body::-webkit-scrollbar-thumb:hover{
 body{
     background-image: #dbdbdb;
 }
-/* style to the content loader */
-.waiting-page{
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(to right,  #00ff4cea, #00ffffe5);  
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    justify-content: center;
-}
-.cont-title{
-   display: block;
-}
-.waiting-title{
-    font-size: 4rem;
-    font-family: 'Hind Siliguri', sans-serif;
-    color:#311b92;
-    text-align: center;
-}
-.waiting-loader{
-    padding: 100px;
-}
-/* all content */
+/* style nav content */
 .content-first{
-    display: none;
+    width: 100%;
 }
-/* style to the nav-menu */
 .container-nav{
     padding: 0px 4% 0px 4%;
     height: 68px;
@@ -214,38 +188,53 @@ body{
 }
 /* style to the main */
 .content-main{
-    display: none !important;
-}
-#main{
     width: 100%;
-    margin-top: 2vh;
+    margin: 2vh 0px;
     display: grid;
     grid-template-columns: 1fr 62% 1fr;
-    grid-template-rows: 3fr 6fr;
+    grid-template-rows: 3% 93% 1fr;
     gap: 4px;
 }
+/* aside layout */
 .aside-content1{
     grid-column: 1/2;
     grid-row: 1/-1;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items:flex-start;
 }
 .aside-content2{
     grid-column: 3/4;
     grid-row: 1/-1;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items:flex-start;
 }
-.content-anime{
+/* filter layout */
+.content-filter{
     grid-column: 2/3;
     grid-row: 1/2;
+    width: 100%;
+    height: 100%;
 }
+/* anime layout */
 .content-anime1{
     grid-column: 2/3;
-    grid-row: 2/-1;
+    grid-row: 2/-3;
 }
+/* pagination layout */
+.content-pagination{
+    grid-column: 2/3;
+    grid-row: 3/4;
+}
+/* style filter */
+.filter-secc{
+    width: 90%;
+    height: 100%;
+    margin: 0px auto;
+    background-color: #2b2b2b;
+}
+/* tyle anime content */
 .anime-title{
     display: block;
     width: 100%;
@@ -255,88 +244,11 @@ body{
     font-family:sans-serif;
     padding: 10px;
 }
-.anime-content-item1{
-    width: 100%;
-    margin: 2px auto;
-    display: flex;
-    flex-wrap: wrap;
-}
 .anime-content-item2{
     width: 100%;
     margin: 2px auto;
     display: flex;
     flex-wrap: wrap;
-}
-.item1{
-    position: relative;
-    width: 22%;
-    height: 120px;
-    background-image: url(/src/app/assets/img/boku.jpg);
-    background-size: cover;
-    background-position: center;
-    background-origin: content-box;
-    margin:8px auto;
-    border-radius: 20px;
-    transition-property: transform, box-shadow;
-    transition-duration: 200ms;
-}
-.item1:hover{
-    transform: scale(1.04);
-    box-shadow: 4px 4px 2px 2px #2e2e2ede;
-}
-.shadow-item1{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: #616161;
-    border-radius: 22px;
-    opacity: .3;
-}
-.link-item1{
-    display: grid;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 28px;
-    gap: 2px;
-}
-.link-info{
-    grid-column: 1/-1;
-    grid-row: 1/2;
-}
-.link-play{
-    grid-column: 1/-1;
-    grid-row: 2/3;
-}
-.link-title{
-    grid-column: 1/-1;
-    grid-row: 3/-1;
-    width: 96%;
-    margin: 0px auto;
-    font-family: 'Hind Siliguri', sans-serif;
-    color:#ffffff;
-    font-size: 17px;
-    opacity: 1;
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
-.play{
-    position: absolute;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    color: #00e031;
-    opacity: 0;
-} 
-.play:hover{
-    opacity: 1;
-}
-.play i{
-    font-size: 48px !important;
 }
 .item2{
     position: relative;
@@ -353,6 +265,7 @@ body{
     box-shadow: 4px 4px 2px 2px #797979;
 }
 .link-item2{
+    position: relative;
     display: grid;
     width: 100%;
     height: 100%;
@@ -380,6 +293,23 @@ body{
     background-color: #616161;
     border-radius: 10px;
     opacity: .1;
+}
+.play{
+    position: absolute;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items:center;
+    color: #039b75;
+    opacity: 0;
+} 
+.play:hover{
+    opacity: 1;
+}
+.play i{
+    font-size: 50px !important;
+    margin: 0px 0px 40% 0px;
 }
 .title-item2{
     grid-column: 1/-1;
@@ -411,6 +341,18 @@ body{
 .icon-item2 i:hover{
     cursor: pointer;
 }
+/* pagination style */
+.pagination-secc{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.pagination-secc .pagination li.active{
+    background-color: #7700ff;
+}
+/* aside style */
 .legion{
     width: 96%;
     height: 90%;
@@ -418,21 +360,12 @@ body{
 }
 /* style to the content footer */
 .content-footer{
-    display: none;
-}
-#footer{
     width: 100%;
     height: 100px;
     background-color: #462bc0;
 }
 /* media responsive for divices small */
 @media (min-width:100px) and (max-width:480px){
-    .waiting-title{
-        font-size: 2rem;
-    }
-    .waiting-loader{
-        padding: 40px;
-    }
     .container-nav{
         padding: 0px;
         height: 64px;
@@ -467,21 +400,15 @@ body{
         margin: 6px auto;
         border: none;
     }
-    #modallog .modal-content .facebook{
-        background-color: #006eff;
-    }
     #modallog .modal-footer a{
         font-size: 12px;
         margin: 2px 0px;
     }
-    #main{
-        background-color: aqua;
-    }
-    #main{
+    .content-main{
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 4fr 6fr;
-        gap: 10px;
+        grid-template-rows: 2% 96% 1fr;
+        background-color: aqua;
     }
     .aside-content1{
         display: none;
@@ -489,36 +416,26 @@ body{
     .aside-content2{
         display: none;
     }
-    .content-anime{
+    .filter-secc{
         grid-column: 1/-1;
         grid-row: 1/2;
     }
     .content-anime1{
         grid-column: 1/-1;
-        grid-row: 2/-1;
+        grid-row: 2/3;
+    }
+    .content-pagination{
+        grid-column: 1/-1;
+        grid-row: 3/4;
     }
     .anime-title{
         font-size: 2rem;
-    }
-    .item1{
-        width: 80%;
-        height: 188px;
-        background-color: #f503a4;
-        margin:10px auto;
-    }
-    .link-title{
-        font-size: 20px;
     }
     .item2{
         width: 60%;
         height: 380px;
         background-color: #ffa600;
         margin: 8px auto;
-    }
-    .img-item2{
-        width: 94%;
-        height: 100%;
-        margin: 6px auto;
     }
     .title-item2{
         margin:2px 4px;
@@ -527,9 +444,6 @@ body{
 }
 /* media responcive for divices medium small */
 @media (min-width:481px) and (max-width:720px){
-    .waiting-title{
-        font-size: 3rem;
-    }
     .container-nav{
         padding: 0px 20;
         height: 76px;
@@ -564,22 +478,15 @@ body{
         font-size: 14px;
         border: none;
     }
-    #modallog .modal-content .facebook{
-        background-color: #006eff;
-    }
     #modallog .modal-footer a{
         font-size: 13px;
         margin: 2px 2px;
     }
-    #main{
-        margin-top: 20px;
-        background-color: bisque;
-    }
-    #main{
+    .content-main{
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows:4fr 6fr;
-        gap: 10px;
+        grid-template-rows: 3% 94% 1fr;
+        background-color:bisque;
     }
     .aside-content1{
         display: none;
@@ -587,22 +494,20 @@ body{
     .aside-content2{
         display: none;
     }
-    .content-anime{
+    .filter-secc{
         grid-column: 1/-1;
         grid-row: 1/2;
     }
     .content-anime1{
         grid-column: 1/-1;
-        grid-row: 2/-1;
+        grid-row: 2/3;
+    }
+    .content-pagination{
+        grid-column: 1/-1;
+        grid-row: 3/4;
     }
     .anime-title{
         font-size: 2rem;
-    }
-    .item1{
-        width: 48%;
-        height: 180px;
-        background-color: #f503a4;
-        margin:8px auto;
     }
     .item2{
         width: 40%;
@@ -610,224 +515,20 @@ body{
         background-color: #ffa600;
         margin: 8px auto;
     }
+    .title-item2{
+        margin:2px 4px;
+        font-size: 16px;
+    }
 }
 /* media responsive for divices medium */
 @media (min-width:721px) and (max-width:992px){
-    .waiting-title{
-        font-size: 3rem;
-    }
-    .container-nav{
-        padding: 0px 20;
-        height: 76px;
-    }
-    .nav-logo{
-        width: 184px;
-        height: 68px;
-        margin-left: -40vw;
-    }
-    #modallog{
-        width: 20em;
-    }
-    #modallog .title-modal{
-        font-size: 24px;
-        margin: 4px 8px;
-    }
-    #modallog .modal-content{
-        padding: 4px;
-    }
-    #modallog .modal-content input{
-        display: block;
-        width: 220px;
-        height: 2.2rem;
-        font-size: 14px;
-        margin: 8px auto;
-    }
-    #modallog .modal-content button{
-        display: block;
-        width: 220px;
-        height: 2.2rem;
-        margin: 8px auto;
-        font-size: 14px;
-        border: none;
-    }
-    #modallog .modal-content .facebook{
-        background-color: #006eff;
-    }
-    #modallog .modal-footer a{
-        font-size: 13px;
-        margin: 2px 2px;
-    }
-    #main{
-        margin-top: 20px;
-        background-color: bisque;
-    }
-    #main{
-        display: grid;
-        grid-template-columns: 300px 12fr;
-        grid-template-rows: 4fr 6fr;
-        gap: 10px;
-    }
-    .aside-content1{
-        grid-column: 1/2;
-        grid-row: 1/-1;
-    }
-    .aside-content2{
-        display: none;
-    }
-    .content-anime{
-        grid-column: 2/-1;
-        grid-row: 1/2;
-    }
-    .content-anime1{
-        grid-column: 2/-1;
-        grid-row: 2/-1;
-    }
-    .anime-title{
-        font-size: 2rem;
-    }
-    .item1{
-        width: 44%;
-        height: 160px;
-        background-color: #f503a4;
-        margin:8px auto;
-    }
-    .item2{
-        width: 44%;
-        height: 300px;
-        background-color: #ffa600;
-        margin: 8px auto;
-    }
+
 }
 /* media responsive for divices medium-large */
 @media (min-width:993px) and (max-width:1220px){
-    #main{
-        display: grid;
-        grid-template-columns: 300px 12fr;
-        grid-template-rows: 4fr 6fr;
-        gap: 10px;
-    }
-    .aside-content1{
-        grid-column: 1/2;
-        grid-row: 1/span 2;
-    }
-    .content-anime{
-        grid-column: 2/-1;
-        grid-row: 1/2;
-    }
-    .content-anime1{
-        grid-column: 2/-1;
-        grid-row: 2/-1;
-    }
-    .anime-title{
-        font-size: 2rem;
-    }
-    .item1{
-        width: 30%;
-        height: 140px;
-        background-color: #f503a4;
-        margin:8px auto;
-    }
-    .item2{
-        width: 28%;
-        height: 320px;
-        background-color: #ffa600;
-        margin: 8px auto;
-    }
+
 }
 /* media responsive for divices big  */
 @media (min-width:1480px) and (max-width:1980px){
-    .waiting-title{
-        font-size: 5rem;
-    }
-    .container-nav{
-        padding: 0px 60px;
-        height: 88px;
-    }
-    .nav-menu{
-       margin-top: 10px;
-    }
-    .nav-logo{
-        width: 260px;
-        height: 86px;
-    }
-    #nav .nav-wrapper ul li .text-menu{
-        font-size: 1.4em;
-    }
-    #modallog{
-        width: 26em;
-    }
-    #modallog .title-modal{
-        font-size: 28px;
-        margin: 4px 8px;
-    }
-    #modallog .modal-content{
-        padding: 4px;
-    }
-    #modallog .modal-content input{
-        display: block;
-        width: 260px;
-        height: 2.8rem;
-        font-size: 18px;
-        margin: 10px auto;
-    }
-    #modallog .modal-content button{
-        display: block;
-        width: 260px;
-        height: 2.8rem;
-        font-size: 18px;
-        margin: 10px auto;
-        border: none;
-    }
-    #modallog .modal-content .facebook{
-        background-color: #006eff;
-    }
-    #modallog .modal-footer a{
-        font-size: 16px;
-        margin: 2px 6px;
-    }
-    #main{
-        background-color: #ff004c;
-        margin-top: 28px;
-    }
-    #main{
-        display: grid;
-        grid-template-columns: 1fr 60% 1fr;
-        grid-template-rows: 3fr 6fr;
-        gap: 10px;
-    }
-    .aside-content1{
-        grid-column: 1/2;
-        grid-row: 1/-1;
-        display: flex;
-        justify-content: center;
-    }
-    .aside-content2{
-        grid-column: 3/4;
-        grid-row: 1/-1;
-        display: flex;
-        justify-content: center;
-    }
-    .content-anime{
-        grid-column: 2/3;
-        grid-row: 1/2;
-    }
-    .content-anime1{
-        grid-column: 2/3;
-        grid-row: 2/-1;
-    }
-    .anime-title{
-        font-size: 2rem;
-    }
-    .item1{
-        width: 22%;
-        height: 140px;
-        background-color: #f503a4;
-        margin:8px auto;
-    }
-    .item2{
-        width: 22%;
-        height: 280px;
-        background-color: #ffa600;
-        margin: 8px auto;
-    }
+
 }
