--- a/src/app/repertorie.html
+++ b/src/app/repertorie.html
@@ -116,7 +116,7 @@
         </aside>
         <section class="content-filter">
             <article class="filter-secc">
-
+                    <h2>hola</h2>
             </article>
         </section>
         <section class="content-anime1">
