--- a/src/app/repertorie.html
+++ b/src/app/repertorie.html
@@ -27,7 +27,7 @@
                         <i class="material-icons">menu</i>
                     </a>
                     <ul class="right hide-on-med-and-down nav-menu">
-                        <li><a href="#" class="text-menu">Home</a></li>
+                        <li><a href="/src/app/main-page.html" class="text-menu">Home</a></li>
                         <li><a href="/src/app/repertorie.html" class="text-menu">Anime repertorie</a></li>
                         <li>
                             <div class="content-search">
@@ -85,7 +85,7 @@
                     </label>
                 </div>
             </li>
-            <li><a href="#">Home</a></li>
+            <li><a href="/src/app/main-page.html">Home</a></li>
             <li><a href="/src/app/repertorie.html">Anime repertorie</a></li>
         </ul>
         <!-- modal register -->
@@ -114,14 +114,14 @@
         <aside class="aside-content1">
             <div class="legion"></div>
         </aside>
-        <section class="content-filter">
-            <article class="filter-secc">
-                    <h2>hola</h2>
-            </article>
-        </section>
         <section class="content-anime1">
-            <h6 class="anime-title">Section Anime´s</h6>
+            <section class="content-filter">
+                <article class="filter-secc">
+                        
+                </article>
+            </section>
             <article class="anime-content-item2">
+                <h6 class="anime-title">Section Anime´s</h6>
                 <div class="item2">
                     <a href="#" class="link-item2">
                         <div class="img-item2">
@@ -379,19 +379,19 @@
                     </span>
                 </div>
             </article>
-        </section>
-        <section class="content-pagination">
-            <article class="pagination-secc"> 
-                <ul class="pagination">
-                  <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-                  <li class="active"><a href="#!">1</a></li>
-                  <li class="waves-effect"><a href="#!">2</a></li>
-                  <li class="waves-effect"><a href="#!">3</a></li>
-                  <li class="waves-effect"><a href="#!">4</a></li>
-                  <li class="waves-effect"><a href="#!">5</a></li>
-                  <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
-                </ul>
-            </article>
+            <section class="content-pagination">
+                <article class="pagination-secc"> 
+                    <ul class="pagination">
+                      <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+                      <li class="active"><a href="#!">1</a></li>
+                      <li class="waves-effect"><a href="#!">2</a></li>
+                      <li class="waves-effect"><a href="#!">3</a></li>
+                      <li class="waves-effect"><a href="#!">4</a></li>
+                      <li class="waves-effect"><a href="#!">5</a></li>
+                      <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+                    </ul>
+                </article>
+            </section>
         </section>
         <aside class="aside-content2">
             <div class="legion"></div>
