--- a/src/app/assets/css/style-repertorie.css
+++ b/src/app/assets/css/style-repertorie.css
@@ -192,7 +192,7 @@ body{
     margin: 2vh 0px;
     display: grid;
     grid-template-columns: 1fr 62% 1fr;
-    grid-template-rows: 3% 93% 1fr;
+    grid-template-rows: 1fr;
     gap: 4px;
 }
 /* aside layout */
@@ -210,21 +210,25 @@ body{
     justify-content: center;
     align-items:flex-start;
 }
+/* anime layout */
+.content-anime1{
+    grid-column: 2/3;
+    grid-row: 1/-1;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 40px 1fr 80px;
+    gap: 10px;
+}
 /* filter layout */
 .content-filter{
-    grid-column: 2/3;
+    grid-column: 1/2;
     grid-row: 1/2;
     width: 100%;
     height: 100%;
 }
-/* anime layout */
-.content-anime1{
-    grid-column: 2/3;
-    grid-row: 2/-3;
-}
 /* pagination layout */
 .content-pagination{
-    grid-column: 2/3;
+    grid-column: 1/2;
     grid-row: 3/4;
 }
 /* style filter */
@@ -245,6 +249,8 @@ body{
     padding: 10px;
 }
 .anime-content-item2{
+    grid-column: 1/2;
+    grid-row: 2/3;
     width: 100%;
     margin: 2px auto;
     display: flex;
@@ -349,8 +355,15 @@ body{
     justify-content: center;
     align-items: center;
 }
+.pagination{
+    width: auto !important;
+}
 .pagination-secc .pagination li.active{
     background-color: #7700ff;
+}
+.pagination-secc li a{
+    font-size: 24px !important;
+    padding: 0px 20px !important;
 }
 /* aside style */
 .legion{
@@ -407,7 +420,7 @@ body{
     .content-main{
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 2% 96% 1fr;
+        grid-template-rows:1fr;
         background-color: aqua;
     }
     .aside-content1{
@@ -416,17 +429,28 @@ body{
     .aside-content2{
         display: none;
     }
-    .filter-secc{
+    .content-anime1{
         grid-column: 1/-1;
         grid-row: 1/2;
+        display: grid;
+        grid-template-columns:1fr;
+        grid-template-rows: 80px 1fr 60px;
     }
     .content-anime1{
         grid-column: 1/-1;
         grid-row: 2/3;
     }
+    .filter-secc{
+        grid-column: 1/-1;
+        grid-row: 1/2;
+    }
     .content-pagination{
         grid-column: 1/-1;
         grid-row: 3/4;
+    }
+    .pagination-secc li a{
+        font-size: 20px !important;
+        padding: 0px 8px !important;
     }
     .anime-title{
         font-size: 2rem;
@@ -485,7 +509,7 @@ body{
     .content-main{
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 3% 94% 1fr;
+        grid-template-rows:1fr;
         background-color:bisque;
     }
     .aside-content1{
@@ -494,17 +518,28 @@ body{
     .aside-content2{
         display: none;
     }
-    .filter-secc{
+    .content-anime1{
         grid-column: 1/-1;
         grid-row: 1/2;
+        display: grid;
+        grid-template-columns:1fr;
+        grid-template-rows: 80px 1fr 60px;
     }
     .content-anime1{
         grid-column: 1/-1;
         grid-row: 2/3;
     }
+    .filter-secc{
+        grid-column: 1/-1;
+        grid-row: 1/2;
+    }
     .content-pagination{
         grid-column: 1/-1;
         grid-row: 3/4;
+    }
+    .pagination-secc li a{
+        font-size: 22px !important;
+        padding: 0px 10px !important;
     }
     .anime-title{
         font-size: 2rem;
@@ -522,11 +557,140 @@ body{
 }
 /* media responsive for divices medium */
 @media (min-width:721px) and (max-width:992px){
-
+    .container-nav{
+        padding: 0px 20;
+        height: 76px;
+    }
+    .nav-logo{
+        width: 184px;
+        height: 68px;
+        margin-left: -40vw;
+    }
+    #modallog{
+        width: 20em;
+    }
+    #modallog .title-modal{
+        font-size: 24px;
+        margin: 4px 8px;
+    }
+    #modallog .modal-content{
+        padding: 4px;
+    }
+    #modallog .modal-content input{
+        display: block;
+        width: 220px;
+        height: 2.2rem;
+        font-size: 14px;
+        margin: 8px auto;
+    }
+    #modallog .modal-content button{
+        display: block;
+        width: 220px;
+        height: 2.2rem;
+        margin: 8px auto;
+        font-size: 14px;
+        border: none;
+    }
+    #modallog .modal-content .facebook{
+        background-color: #006eff;
+    }
+    #modallog .modal-footer a{
+        font-size: 13px;
+        margin: 2px 2px;
+    }
+    .content-main{
+        display: grid;
+        grid-template-columns: 260px 1fr;
+        grid-template-rows:1fr;
+        background-color:cadetblue;
+    }
+    .aside-content1{
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    .aside-content2{
+        display: none;
+    }
+    .content-anime1{
+        grid-column: 2/3;
+        grid-row: 1/2;
+        display: grid;
+        grid-template-columns:1fr;
+        grid-template-rows: 60px 1fr 50px;
+    }
+    .filter-secc{
+        grid-column: 1/-1;
+        grid-row: 1/2;
+    }
+    .content-pagination{
+        grid-column: 1/-1;
+        grid-row: 3/4;
+    }
+    .pagination-secc li a{
+        font-size: 24px !important;
+        padding: 0px 12px !important;
+    }
+    .anime-title{
+        font-size: 2rem;
+    }
+    .item2{
+        width: 44%;
+        height: 300px;
+        background-color: #ffa600;
+        margin: 8px auto;
+    }
+    .title-item2{
+        margin:2px 4px;
+        font-size: 16px;
+    }
 }
 /* media responsive for divices medium-large */
 @media (min-width:993px) and (max-width:1220px){
-
+    .content-main{
+        display: grid;
+        grid-template-columns: 300px 1fr;
+        grid-template-rows:1fr;
+        background-color:cadetblue;
+    }
+    .aside-content1{
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    .aside-content2{
+        display: none;
+    }
+    .content-anime1{
+        grid-column: 2/3;
+        grid-row: 1/2;
+        display: grid;
+        grid-template-columns:1fr;
+        grid-template-rows: 50px 1fr 44px;
+    }
+    .filter-secc{
+        grid-column: 1/-1;
+        grid-row: 1/2;
+    }
+    .content-pagination{
+        grid-column: 1/-1;
+        grid-row: 3/4;
+    }
+    .pagination-secc li a{
+        font-size: 24px !important;
+        padding: 0px 12px !important;
+    }
+    .anime-title{
+        font-size: 2rem;
+    }
+    .item2{
+        width: 28%;
+        height: 320px;
+        background-color: #ffa600;
+        margin: 8px auto;
+    }
+    .title-item2{
+        margin:2px 4px;
+        font-size: 16px;
+    }
 }
 /* media responsive for divices big  */
 @media (min-width:1480px) and (max-width:1980px){
