--- a/src/app/repertorie.html
+++ b/src/app/repertorie.html
@@ -117,7 +117,32 @@
         <section class="content-anime1">
             <section class="content-filter">
                 <article class="filter-secc">
-                        
+                    <div class="input-field">
+                        <select multiple>
+                          <option value="" disabled>Gender</option>
+                          <option value="1">Option 1</option>
+                          <option value="2">Option 2</option>
+                          <option value="3">Option 3</option>
+                        </select>
+                    </div>
+                    <div class="input-field">
+                        <select>
+                          <option value="" disabled>Order</option>
+                          <option value="1">Of A to Z</option>
+                          <option value="2">Of Z to A</option>
+                          <option value="3">Simbol *</option>
+                        </select>
+                    </div>
+                    <div class="input-field">
+                        <select>
+                          <option value="" disabled>Upload date</option>
+                          <option value="1">This week</option>
+                          <option value="2">This month</option>
+                          <option value="3">This year</option>
+                          <option value="3">Past</option>
+                        </select>
+                    </div>
+                    <button class="btn-filter" id="btn-filter">Filter <i class="material-icons">tune</i></button>
                 </article>
             </section>
             <article class="anime-content-item2">
@@ -126,11 +151,11 @@
                     <a href="#" class="link-item2">
                         <div class="img-item2">
                             <span class="shadow-item2"></span>
-                            <span class="play">
-                                <i class="medium material-icons">play_circle_outline</i>
-                            </span>
                         </div>
                         <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
                     </a>
                     <span class="icon-item2">
                         <i class="material-icons">favorite_border</i>
@@ -142,11 +167,11 @@
                     <a href="#" class="link-item2">
                         <div class="img-item2">
                             <span class="shadow-item2"></span>
-                            <span class="play">
-                                <i class="medium material-icons">play_circle_outline</i>
-                            </span>
                         </div>
                         <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
                     </a>
                     <span class="icon-item2">
                         <i class="material-icons">favorite_border</i>
@@ -158,11 +183,11 @@
                     <a href="#" class="link-item2">
                         <div class="img-item2">
                             <span class="shadow-item2"></span>
-                            <span class="play">
-                                <i class="medium material-icons">play_circle_outline</i>
-                            </span>
                         </div>
                         <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
                     </a>
                     <span class="icon-item2">
                         <i class="material-icons">favorite_border</i>
@@ -174,11 +199,11 @@
                     <a href="#" class="link-item2">
                         <div class="img-item2">
                             <span class="shadow-item2"></span>
-                            <span class="play">
-                                <i class="medium material-icons">play_circle_outline</i>
-                            </span>
                         </div>
                         <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
                     </a>
                     <span class="icon-item2">
                         <i class="material-icons">favorite_border</i>
@@ -190,11 +215,11 @@
                     <a href="#" class="link-item2">
                         <div class="img-item2">
                             <span class="shadow-item2"></span>
-                            <span class="play">
-                                <i class="medium material-icons">play_circle_outline</i>
-                            </span>
                         </div>
                         <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
                     </a>
                     <span class="icon-item2">
                         <i class="material-icons">favorite_border</i>
@@ -206,11 +231,11 @@
                     <a href="#" class="link-item2">
                         <div class="img-item2">
                             <span class="shadow-item2"></span>
-                            <span class="play">
-                                <i class="medium material-icons">play_circle_outline</i>
-                            </span>
                         </div>
                         <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
                     </a>
                     <span class="icon-item2">
                         <i class="material-icons">favorite_border</i>
@@ -222,11 +247,11 @@
                     <a href="#" class="link-item2">
                         <div class="img-item2">
                             <span class="shadow-item2"></span>
-                            <span class="play">
-                                <i class="medium material-icons">play_circle_outline</i>
-                            </span>
                         </div>
                         <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
                     </a>
                     <span class="icon-item2">
                         <i class="material-icons">favorite_border</i>
@@ -238,11 +263,11 @@
                     <a href="#" class="link-item2">
                         <div class="img-item2">
                             <span class="shadow-item2"></span>
-                            <span class="play">
-                                <i class="medium material-icons">play_circle_outline</i>
-                            </span>
                         </div>
                         <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
                     </a>
                     <span class="icon-item2">
                         <i class="material-icons">favorite_border</i>
@@ -254,11 +279,11 @@
                     <a href="#" class="link-item2">
                         <div class="img-item2">
                             <span class="shadow-item2"></span>
-                            <span class="play">
-                                <i class="medium material-icons">play_circle_outline</i>
-                            </span>
                         </div>
                         <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
                     </a>
                     <span class="icon-item2">
                         <i class="material-icons">favorite_border</i>
@@ -270,11 +295,11 @@
                     <a href="#" class="link-item2">
                         <div class="img-item2">
                             <span class="shadow-item2"></span>
-                            <span class="play">
-                                <i class="medium material-icons">play_circle_outline</i>
-                            </span>
                         </div>
                         <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
                     </a>
                     <span class="icon-item2">
                         <i class="material-icons">favorite_border</i>
@@ -286,11 +311,11 @@
                     <a href="#" class="link-item2">
                         <div class="img-item2">
                             <span class="shadow-item2"></span>
-                            <span class="play">
-                                <i class="medium material-icons">play_circle_outline</i>
-                            </span>
                         </div>
                         <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
                     </a>
                     <span class="icon-item2">
                         <i class="material-icons">favorite_border</i>
@@ -302,11 +327,11 @@
                     <a href="#" class="link-item2">
                         <div class="img-item2">
                             <span class="shadow-item2"></span>
-                            <span class="play">
-                                <i class="medium material-icons">play_circle_outline</i>
-                            </span>
                         </div>
                         <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
                     </a>
                     <span class="icon-item2">
                         <i class="material-icons">favorite_border</i>
@@ -318,11 +343,11 @@
                     <a href="#" class="link-item2">
                         <div class="img-item2">
                             <span class="shadow-item2"></span>
-                            <span class="play">
-                                <i class="medium material-icons">play_circle_outline</i>
-                            </span>
                         </div>
                         <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
                     </a>
                     <span class="icon-item2">
                         <i class="material-icons">favorite_border</i>
@@ -334,11 +359,11 @@
                     <a href="#" class="link-item2">
                         <div class="img-item2">
                             <span class="shadow-item2"></span>
-                            <span class="play">
-                                <i class="medium material-icons">play_circle_outline</i>
-                            </span>
                         </div>
                         <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
                     </a>
                     <span class="icon-item2">
                         <i class="material-icons">favorite_border</i>
@@ -350,11 +375,11 @@
                     <a href="#" class="link-item2">
                         <div class="img-item2">
                             <span class="shadow-item2"></span>
-                            <span class="play">
-                                <i class="medium material-icons">play_circle_outline</i>
-                            </span>
                         </div>
                         <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
                     </a>
                     <span class="icon-item2">
                         <i class="material-icons">favorite_border</i>
