--- a/src/app/assets/css/style-repertorie.css
+++ b/src/app/assets/css/style-repertorie.css
@@ -242,11 +242,20 @@ body{
     align-items: center;
     justify-content: space-evenly;
 }
-.select-wrapper input.select-dropdown:focus{
-    border-bottom: 1px solid blueviolet !important;
+.filter-secc .dropdown-trigger{
+    background-color: blueviolet;
+    color: #ffffff;
 }
-.input-field .dropdown-content li span{
-    color: blueviolet;
+.filter-secc .dropdown-trigger:hover{
+    background-color: blueviolet;
+    color: #ffffff;
+}
+.filter-secc .dropdown-trigger:focus{
+    background-color: blueviolet;
+    color: #ffffff;
+}
+.filter-secc .dropdown-content{
+    top: 140px !important;
 }
 .btn-filter{
     border: none;
