creation anime create

--- a/src/app/repertorie.html
+++ b/src/app/repertorie.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AnimeManiatics-repertorie</title>
@@ -146,7 +145,7 @@
                         </select>
                     </div> -->
                     <ul id='dropdown1' class='dropdown-content'>
-                        <li><label><input type="checkbox"><span>Option 24</span> </label></li>
+                        <li><label><input type="checkbox"><span>Option 1</span> </label></li>
                         <li><label><input type="checkbox"><span>Option 2</span> </label></li>
                         <li><label><input type="checkbox"><span>Option 3</span> </label></li>
                     </ul>
