--- a/src/app/anime-create.html
+++ b/src/app/anime-create.html
@@ -38,14 +38,17 @@
     <main class="main" id="main">
         <section class="anime-data">
             <div class="content1">
-                <form action="">
-
+                <form action="" class="date-form">
+                    <div class="input-field content-date">
+                        <input id="name" type="text" class="d-input" required>
+                        <label for="name">First Name</label>
+                    </div>
                 </form>
             </div>
         </section>
         <section class="anime-preview">
             <div class="content2">
-                
+                <span class="btn-change"> <i class="material-icons">desktop_windows</i></span>
             </div>
         </section>
     </main>
