--- a/src/app/form-login.html
+++ b/src/app/form-login.html
@@ -40,29 +40,29 @@
                 <div class="date-area">
                     <form action="#"  class="dates">
                         <fieldset class="date1">
-                            <div class="input-field" id="content-d">
+                            <div class="input-field content-d" id="">
                                 <input id="first_name" type="text" class="d-input" required>
                                 <label for="first_name">First Name</label>
                             </div>
-                            <div class="input-field" id="content-d">
+                            <div class="input-field content-d" id="">
                                 <input id="last_name" type="text" class="d-input">
                                 <label for="last-name">Last name</label>
                             </div>
-                            <div class="input-field" id="content-d">
+                            <div class="input-field content-d" id="">
                                 <input id="user-name" type="text" class="d-input" required>
                                 <label for="user-name">User name</label>
                             </div>
                         </fieldset>
                         <fieldset class="date2">
-                            <div class="input-field" id="content-d">
+                            <div class="input-field content-d" id="">
                                 <input id="password" type="password" class="d-input">
                                 <label for="password">Password</label>
                             </div>
-                            <div class="input-field" id="content-d">
+                            <div class="input-field content-d" id="">
                                 <input id="password-c" type="password" class="d-input">
                                 <label for="password-c">Confirm password</label>
                             </div>
-                            <div class="input-field" id="content-d">
+                            <div class="input-field content-d" id="">
                                 <input id="email" type="email" class="d-input" required>
                                 <label for="email">e-mail</label>
                             </div>
@@ -81,13 +81,13 @@
                 <div class="date-area">
                     <form action="" method="post" class="dates1">
                         <fieldset class="date1">
-                            <div class="input-field" id="content-d">
+                            <div class="input-field content-d" id="">
                                 <input id="email" type="email" class="d-input" required>
                                 <label for="email">e-mail</label>
                             </div>
                         </fieldset>
                         <fieldset class="date2">
-                            <div class="input-field" id="content-d">
+                            <div class="input-field content-d" id="">
                                 <input id="password" type="password" class="d-input" required>
                                 <label for="password">Password</label>
                             </div>
