--- a/src/app/assets/css/style-anime-create.css
+++ b/src/app/assets/css/style-anime-create.css
@@ -1,6 +1,6 @@
-*{
-    padding: 0px;
-    margin: 0px;
+:root{
+    --color-area:#00ff80;
+    --color-data:#ecca08;
 }
 /* style to the body */
 body{
@@ -28,7 +28,7 @@ body{
     margin: 0px auto;
     margin-top: 2vh;
     display: grid;
-    grid-template-columns: 60% 1fr;
+    grid-template-columns: 56% 1fr;
     grid-template-rows: 1fr;
     gap: 10px;
 }
@@ -44,13 +44,69 @@ body{
 .content1{
     width: 100%;
     height: 100%;
-    border: 1px solid red;
+    border: 1px solid var(--color-area);
+    border-radius: 10px;
     margin: 0px auto;
+}
+.date-form{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.content-date{
+    width: 28%;
+}
+.d-input{
+    width: 100% !important;
+    font-size: 14px !important;
+    margin: 0px !important;
+    color: #f1f1f1;
+    box-shadow: none !important;
+}
+.d-input:focus-visible{
+    border-bottom: 1px solid var(--color-data) !important;
+    box-shadow:1px solid var(--color-data) !important;
+}
+.d-input:focus-visible+label{
+    color: var(--color-data) !important;
 }
 .content2{
     width: 100%;
     height: 100%;
-    border: 1px solid red;
+    position: relative;
+    border: 1px solid var(--color-area);
+    border-radius: 10px;
     margin: 0px auto;
+    overflow: scroll;
     display: grid;
+}
+.content2::-webkit-scrollbar{
+    width: 8px;
+}
+.content2::-webkit-scrollbar-thumb{
+    background-color: #a3a3a3;
+    border-radius: 20px;
+}
+.content2::-webkit-scrollbar-thumb:hover{
+    background-color: #7e7e7e;
+}
+.btn-change{
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    padding: 10px;
+    background-color: var(--color-data);
+    border-radius: 100%;
+    opacity: .8;
+    cursor: pointer;
+}
+.btn-change i{
+    color: #ffffff;
+}
+.btn-change:hover{
+    transform: scale(1.2);
+    opacity: 1;
 }
