--- a/src/app/assets/css/style-anime-create.css
+++ b/src/app/assets/css/style-anime-create.css
@@ -1,6 +1,6 @@
 :root{
     --color-area:#00ff80;
-    --color-data:#ecca08;
+    --color-data:#f5a30b;
 }
 /* style to the body */
 body{
@@ -36,28 +36,34 @@ body{
 .anime-data{
     grid-column: 1/2;
     grid-row: 1/-1;
+    display: grid;
 }
 .anime-preview{
     grid-column: 2/3;
     grid-row: 1/-1;
 }
 .content1{
+    grid-column: 1/2;
+    grid-row: 1/2;
     width: 100%;
     height: 100%;
     border: 1px solid var(--color-area);
     border-radius: 10px;
     margin: 0px auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 48px;
 }
 .date-form{
-    width: 100%;
-    height: 100%;
+    grid-column: 1/2;
+    grid-row: 1/2;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    align-items: center;
 }
 .content-date{
-    width: 28%;
+    width: 30%;
+    height: 10%;
 }
 .d-input{
     width: 100% !important;
@@ -73,6 +79,57 @@ body{
 .d-input:focus-visible+label{
     color: var(--color-data) !important;
 }
+.input-field .btn{
+    border-radius: 20%;
+    padding: 0px 10px;
+    background-color: var(--color-data);
+    color: #ffffff;
+}
+.input-field .btn:hover{
+    background-color: var(--color-data);
+}
+.file-path{
+    color: #ffffff;
+    font-size: 10px !important;
+}
+.content-date-check{
+    width: 30%;
+    height: 10%;
+    display: flex;
+    align-items: center;
+}
+.content-date-check label span::before{
+    border: 2px solid var(--color-data) !important;
+}
+.with-gap:checked+span::after{
+    background-color:none !important;
+    border: none !important;
+}
+.content-date-check label span::after{
+    background-color: var(--color-data) !important;
+}
+.content-btn{
+    grid-column: 1/2;
+    grid-row: 2/3;
+    position: relative;
+}
+.btn-data{
+    position: absolute;
+    right: 10px;
+    top: 2px;
+    border: none;
+    background-color: var(--color-data);
+    color: #ffffff;
+    padding: 8px;
+    font-size: 18px;
+    border-radius: 10px;
+}
+.btn-data:active{
+    transform: scale(.9);
+}
+.btn-data:focus{
+    background-color: var(--color-data);
+}
 .content2{
     width: 100%;
     height: 100%;
@@ -80,10 +137,9 @@ body{
     border: 1px solid var(--color-area);
     border-radius: 10px;
     margin: 0px auto;
-    overflow: scroll;
     display: grid;
 }
-.content2::-webkit-scrollbar{
+/* .content2::-webkit-scrollbar{
     width: 8px;
 }
 .content2::-webkit-scrollbar-thumb{
@@ -92,7 +148,7 @@ body{
 }
 .content2::-webkit-scrollbar-thumb:hover{
     background-color: #7e7e7e;
-}
+} */
 .btn-change{
     position: absolute;
     right: 20px;
