--- a/src/app/anime-create.html
+++ b/src/app/anime-create.html
@@ -40,7 +40,7 @@
             <div class="content1">
                 <form action="" class="date-form">
                     <div class="input-field content-date">
-                        <input id="name" type="text" class="d-input" required>
+                        <input id="name" type="text" class="d-input" required maxlength="50">
                         <label for="name">Anime name</label>
                     </div>
                     <div class="file-field input-field content-date">
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                     <div class="input-field content-date">
-                        <input id="caption" type="text" class="d-input" required>
+                        <input id="caption" type="text" class="d-input" required maxlength="30">
                         <label for="caption">Caption</label>
                     </div>
                     <div class="content-date-check">
@@ -72,6 +72,27 @@
                     <div class="content-date">
                         <input type="text" class="datepicker" placeholder="Ended-date">
                     </div>
+                    <div class="input-field content-date">
+                        <select>
+                          <option value="" disabled selected>  </option>
+                          <option value="1">Serie</option>
+                          <option value="2">Movie</option>
+                          <option value="3">Ova</option>
+                        </select>
+                        <label>Type anime</label>
+                    </div>
+                    <div class="input-field content-date">
+                        <input id="eng-name" type="text" class="d-input" required maxlength="30">
+                        <label for="eng-name">ENG name</label>
+                    </div>
+                    <div class="input-field content-date">
+                        <input id="hiragana-name" type="text" class="d-input" required maxlength="30">
+                        <label for="hiragana-name">Hiragana name</label>
+                    </div>
+                    <div class="input-field content-date-area">
+                        <textarea id="description" class="materialize-textarea d-input" maxlength="160"></textarea>
+                        <label for="description">Description</label>
+                    </div>
                 </form>
                 <div class="content-btn">
                     <button class="btn-data">Apply</button>
@@ -81,7 +102,24 @@
         <section class="anime-preview">
             <div class="content2">
                 <span class="btn-change"> <i class="material-icons">desktop_windows</i></span>
+                <!-- <div class="card">
+                    <a href="#" class="link-item2">
+                        <div class="img-item2">
+                            <span class="shadow-item2"></span>
+                        </div>
+                        <div class="title-item2">Yatogame-chan Kansatsu Nikki Sansatsume</div>
+                        <span class="play">
+                            <i class="medium material-icons">play_circle_outline</i>
+                        </span>
+                    </a>
+                    <span class="icon-item2">
+                        <i class="material-icons">favorite_border</i>
+                        <i class="material-icons">turned_in_not</i>
+                        <i class="material-icons">info_outline</i>
+                    </span>
+                </div> -->
             </div>
+            <!-- <div class="content3"></div> -->
         </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
